...
        configureCollectionView()
    }

    // MARK: - Collection view

    private func configureCollectionView() {
        collectionView.accessibilityLabel = "Gallery"

        collectionView.register(GalleryCollectionViewCell.self, forCellWithReuseIdentifier: GalleryCollectionViewCell.reuseIdentifier)

        collectionView.dataSource = dataSource

        collectionView.backgroundColor = .systemBackground
...
