...

        window.rootViewController = viewController
    }

    private func showGalleryDetail() {
        let artwork = Artwork(guid: "guid",
                              title: "Title 1",
                              imageURL: URL(string: "https://www.example.com/1.jpg")!)
        let viewModel = GalleryItemDetailViewModel(artwork: artwork, servicesProvider: servicesProvider)
        let viewController = GalleryItemDetailViewController(viewModel: viewModel)

        window.rootViewController = viewController
    }
...
