...

    override func loadView() {
        super.loadView()

        layoutElements()

        view.accessibilityIdentifier = "Gallery Detail"
        view.backgroundColor = .black
    }

    // MARK: - Bindings

    private var cancelBag = Set<AnyCancellable>()
...
